--- a/src/css/about.css
+++ b/src/css/about.css
@@ -12,7 +12,7 @@
 
 .about_h1 {
     margin: 0; 
-    color: #fff; 
+    color: black; 
     font-family:sans-serif; 
     font-size: 50px; 
     text-align: center;
@@ -22,6 +22,6 @@
     font-size: 20px; 
     width: 50%; 
     margin: 5% auto 5% auto; 
-    color: #fff; 
+    color: black; 
     text-align: center;
 }
