--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -48,8 +48,8 @@
 
 .footer_main {
     display: flex; 
-    justify-content: space-between; 
-    border-top: 1px solid #fff;
+    justify-content: space-between;
+    background-color: black;
 }
 
 .footer_div {
