--- a/src/css/header.css
+++ b/src/css/header.css
@@ -3,8 +3,9 @@
 }
 
 .header_div {
-    width: 100%; 
-    position: absolute; 
+    background-color: #f8c018;
+    width: 100%;
+    height: 65px;
     top: 0px; 
     left: 0px; 
     display: flex; 
@@ -20,16 +21,15 @@
 
 .header_span {
     display: flex; 
-    margin-right: 5%; 
-    margin-top: 2%;
+    margin-right: 5%;
 }
 
 .up_button {
     cursor: pointer; 
-    font-size: 20px; 
+    font-size: 20px;
     border: none; 
     width: 150px; 
-    color: white; 
+    color: black; 
     background-color: transparent; 
     text-decoration: none
 }
@@ -39,30 +39,27 @@
     color: transparent; 
     font-size: 190px;
     margin: 10px; 
-    -webkit-text-stroke: 1px white;
+    -webkit-text-stroke: 5px black;
 }
 
 .header_div_main_text_15 {
     width: 100%; 
-    position: absolute;
     top: 15%; 
     left: 0px; 
     display: flex; 
     justify-content: center;
 }
 
-.header_div_main_text_25 {
+.header_div_main_text_30 {
     width: 100%; 
-    position: absolute; 
-    top: 25%; 
+    top: 40%; 
     left: 0px; 
     display: flex; 
-    justify-content: center;
+    justify-content: left;
 }
 
 .header_div_main_text_50 {
     width: 100%; 
-    position: absolute; 
     top: 50%; 
     left: 0px; 
     display: flex; 
@@ -71,7 +68,7 @@
 
 .header_div_h1 {
     font-family: Helvetica; 
-    color: white; 
+    color: black; 
     font-size: 70px;
     margin-left: 15%; 
     margin-right: 15%;
