--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,27 +1,49 @@
 .about_div {
-    display: flex; 
-    justify-content: center; 
+    display: flex;
+    justify-content: center;
     margin: 10%;
 }
 
 .about_img {
-    height: 50%; 
-    width: 50%; 
-    border-radius: 5%;
+    height: 50%;
+    width: 50%;
+    animation: 5s infinite about_img;
+}
+
+@keyframes about_img {
+    0% {
+        transform: rotate(0deg)
+    }
+
+    100% {
+        transform: rotate(360deg)
+    }
 }
 
 .about_h1 {
-    margin: 0; 
-    color: black; 
-    font-family:sans-serif; 
-    font-size: 50px; 
+    margin: 0;
+    color: black;
+    font-family: sans-serif;
+    font-size: 50px;
     text-align: center;
 }
 
 .about_p {
-    font-size: 20px; 
-    width: 50%; 
-    margin: 5% auto 5% auto; 
-    color: black; 
+    font-size: 20px;
+    width: 50%;
+    margin: 5% auto 5% auto;
+    color: black;
     text-align: center;
+}
+
+.btn_animation {
+    margin-top: 15px; 
+    cursor: pointer; 
+    font-size: 20px; 
+    height: 50px; 
+    width: 80px; 
+    color: black; 
+    background-color: white;
+    margin: 0 auto;
+    display: block;
 }
