--- a/src/components/Market/Css/Market.css
+++ b/src/components/Market/Css/Market.css
@@ -1,14 +1,14 @@
 .market_div {
-    width: 20%; 
+    width: 20%;
     background-color: #fff; 
     display: inline-block; 
     text-align: center;
     cursor: pointer;
     margin: 1%;
-}
-
-.market_div:hover {
-    background-color: #ececec; 
+    text-align: center; 
+    border-top: 15px solid #f8c018; 
+    box-shadow: -5px 5px 10px grey;
+    border-radius: 10px;
 }
 
 .market_left {
@@ -48,4 +48,23 @@ input {
 .market_h2 {
     display: flex; 
     justify-content: center;
+}
+
+.market_main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.market_name_coin {
+    border-bottom: 1px solid black;
+}
+
+.market_input {
+    margin-top: 0;
+    margin-bottom: 30px;
+    width: 200px;
+    height: 40px;
+    font-size: 20px;
+    border-radius: 40px;
 }
