--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,20 @@ body {
   margin: 0%; 
   background-color: #f0f0f0;
 }
+
+.back-to-top {
+  background: #f8c018;
+  border: none;
+  z-index: 5;
+  font-size: 35px;
+  border-radius: 50px;
+  position: fixed;
+  bottom: 50px;
+  padding: 10px 12px;
+  right: 50px;
+  cursor: pointer;
+}
+
+.back-to-top:hover {
+  font-size: 50px;
+}
