--- a/src/components/Market/Css/Market.css
+++ b/src/components/Market/Css/Market.css
@@ -1,5 +1,5 @@
 .market_div {
-    width: 20%;
+    width: 300px;
     background-color: #fff; 
     display: inline-block; 
     text-align: center;
