--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -37,15 +37,23 @@
     border-bottom: 5px solid #E0E0E0;
 }
 
-.btn{
-    font-size: 20px;
-    color: white;
-    width: 100%;
-    height: 100%;
-    background: rgb(146, 79, 79);
-    border-radius: 5px;
-    cursor: pointer;
+.btn_footer{
+    border: none;
+    margin-top: 15px; 
+    cursor: pointer; 
+    font-size: 20px; 
+    height: 50px; 
+    width: 170px; 
+    color: white; 
+    background-color: rgb(146, 79, 79);
+    margin: 0 auto;
+    display: block;
 }
+
+.btn_footer:disabled{
+    background-color: #E0E0E0;
+}
+
 
 .footer_main {
     display: flex; 
