--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -15,7 +15,7 @@
 .header_logo {
     color: #fff; 
     font-family:sans-serif; 
-    font-size: 30px; 
+    font-size: 2rem; 
     margin: 25% 0 0 100%;
 }
 
@@ -26,9 +26,9 @@
 
 .up_button {
     cursor: pointer; 
-    font-size: 20px;
+    font-size: 1rem;
     border: none; 
-    width: 150px; 
+    width: 7rem; 
     color: black; 
     background-color: transparent; 
     text-decoration: none
@@ -37,7 +37,7 @@
 .timer{
     font-family: Helvetica; 
     color: transparent; 
-    font-size: 190px;
+    font-size: 10rem;
     margin: 10px; 
     -webkit-text-stroke: 5px black;
 }
